# hcr-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
notes/: job_posting_restructure_plan.md  news_collector_investigation.md  phase2_plan.md
src/hcr_mcp/: config.py  errors.py  llm_client.py  net.py  server.py  storage.py  web_fetch.py
src/hcr_mcp/company_report/: company_profile_collector.py  competitor_finder.py  dart_collector.py  dart_normalize.py  fresh_generator.py  industry_keyword.py  job_site_profile_collector.py  jobsite_parsers.py  prompts.py  report_builder.py  schemas.py
src/hcr_mcp/company_report/news/: collector.py  event_taxonomy.py
src/hcr_mcp/fit/: job_collector.py  prompts.py  resume_collector.py  resume_schemas.py  schemas.py  service.py  tool.py
src/hcr_mcp/job_posting/: collector.py  prompts.py  schemas.py  site_parsers.py  site_profile_collector.py
