[project]
name = "hcr-mcp"
version = "0.1.0"
description = "HCR 취업 분석 MCP 서버 — 회사 분석 보고서 · 적합도 분석 보고서 · AI 면접, BYOK 로컬 실행형"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openai>=1.50.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic-settings>=2.5",
    "chromadb>=0.5",
    "websockets>=13.0",
    "scrapy>=2.11",
    "pymupdf>=1.24",
]

[project.scripts]
hcr-mcp = "hcr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hcr_mcp"]
